--- a/course.html
+++ b/course.html
@@ -4,21 +4,21 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <link rel="stylesheet" href="/assets/css/main.css" />
-<title>Course</title>
+<title>그릿에듀 | 코스</title>
 </head>
 <body>
-<header>
-  <div class="nav">
-    <div class="left"><a href="/"><img src="./assets/logo.png" alt="GRIT 로고"></a></div>
-    <div class="center">
-      <nav class="menu">
-        <a href="/">그릿에듀</a>
-        <a href="/story.html">GRIT EDU STORY</a>
-        <a href="/instructors.html">강사진</a>
-        <a href="/album.html">앨범</a>
-        <a href="/consult.html">상담 예약</a>
-      </nav>
-    </div>
+<header class="site-header">
+  <div class="container">
+    <a href="/index.html" class="logo" aria-label="그릿에듀">그릿에듀</a>
+    <nav class="site-nav" aria-label="주 메뉴">
+      <ul>
+        <li><a href="/index.html">그릿에듀</a></li>
+        <li><a href="/story.html">이야기</a></li>
+        <li><a href="/instructors.html">강사진</a></li>
+        <li><a href="/album.html">갤러리</a></li>
+        <li><a href="/contact.html">문의</a></li>
+      </ul>
+    </nav>
   </div>
 </header>
 
@@ -39,7 +39,7 @@
   </section>
 </main>
 
-<footer><div class="inner">© 2025 GRIT EduTech</div></footer>
+<footer><div class="inner">© 2025 그릿에듀</div></footer>
 
 <script type="module" src="/assets/js/progress.js"></script>
 <script type="module" src="/assets/js/render-course.js"></script>
