feat(ui): unified header/footer, instructor hover animation, auto gallery, visual depth, favicon

--- a/course.html
+++ b/course.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
+<link rel="icon" type="image/jpeg" href="./assets/favicon.jpg">
 <link rel="stylesheet" href="/assets/css/main.css" />
 <title>그릿에듀 | 코스</title>
 </head>
@@ -43,5 +44,6 @@
 
 <script type="module" src="/assets/js/progress.js"></script>
 <script type="module" src="/assets/js/render-course.js"></script>
+<script type="module" src="./assets/js/common.js"></script>
 </body>
 </html>
