--- a/instructors.html
+++ b/instructors.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="icon" type="image/jpeg" href="./assets/favicon.jpg">
   <title>그릿에듀 | 강사진</title>
   <link rel="stylesheet" href="./assets/css/main.css">
 </head>
@@ -114,5 +115,6 @@
 
     document.addEventListener('DOMContentLoaded', loadInstructors);
   </script>
+  <script type="module" src="./assets/js/common.js"></script>
 </body>
 </html>
