--- a/index.html
+++ b/index.html
@@ -9,23 +9,6 @@
 </head>
 <body>
 
-<header class="grit-header">
-  <div class="grit-header__wrap">
-    <a class="grit-logo" href="./index.html" aria-label="그릿에듀 홈">
-      <img src="./assets/logo.png" alt="그릿에듀 로고">
-    </a>
-    <nav class="grit-nav" aria-label="주 메뉴">
-      <ul>
-        <li><a href="./index.html" class="is-active">그릿에듀</a></li>
-        <li><a href="./story.html">이야기</a></li>
-        <li><a href="./instructors.html">강사진</a></li>
-        <li><a href="./album.html">갤러리</a></li>
-        <li><a href="./contact.html">문의</a></li>
-      </ul>
-    </nav>
-  </div>
-</header>
-
 <main>
   <section class="grit-hero">
     <img src="./assets/banner_main.png" alt="그릿에듀 배너">
@@ -34,6 +17,13 @@
   <section class="grit-section">
     <div class="grit-section__head">
       <h2>강사진</h2>
+    </div>
+    <div class="grit-filter" role="tablist" aria-label="강사진 필터">
+      <button class="on" data-subject="all" role="tab" aria-selected="true">전체</button>
+      <button data-subject="국어" role="tab">국어</button>
+      <button data-subject="수학" role="tab">수학</button>
+      <button data-subject="영어" role="tab">영어</button>
+      <button data-subject="과학" role="tab">과학</button>
     </div>
     <div id="gritInstructorsPreview" class="grit-grid"></div>
   </section>
@@ -46,26 +36,6 @@
   </section>
 </main>
 
-<footer class="grit-footer">
-  <div class="grit-footer__sns">
-    <a href="https://www.instagram.com/grit_edu_seoul/" target="_blank" rel="noopener" aria-label="Instagram" class="sns">
-      <!-- Instagram SVG (흑백) -->
-      <svg width="26" height="26" viewBox="0 0 24 24" fill="#222" aria-hidden="true"><path d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5zm0 2a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V7a3 3 0 0 0-3-3H7zm5 3a5 5 0 1 1 0 10 5 5 0 0 1 0-10zm0 2.2A2.8 2.8 0 1 0 12 14.8 2.8 2.8 0 0 0 12 7.2zM18 6.5a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>
-    </a>
-    <a href="https://www.youtube.com/@gritedu_official" target="_blank" rel="noopener" aria-label="YouTube" class="sns">
-      <!-- YouTube SVG (흑백) -->
-      <svg width="28" height="28" viewBox="0 0 24 24" fill="#222" aria-hidden="true"><path d="M23.5 6.2a3 3 0 0 0-2.1-2.1C19.7 3.5 12 3.5 12 3.5s-7.7 0-9.4.6A3 3 0 0 0 .5 6.2 31 31 0 0 0 0 12a31 31 0 0 0 .5 5.8 3 3 0 0 0 2.1 2.1c1.7.6 9.4.6 9.4.6s7.7 0 9.4-.6a3 3 0 0 0 2.1-2.1A31 31 0 0 0 24 12a31 31 0 0 0-.5-5.8zM9.8 15.5V8.5L16 12l-6.2 3.5z"/></svg>
-    </a>
-    <a href="https://blog.naver.com/PostList.naver?blogId=gritedu&categoryNo=0&from=postList" target="_blank" rel="noopener" aria-label="Naver Blog" class="sns">
-      <!-- Blog SVG (흑백) -->
-      <svg width="26" height="26" viewBox="0 0 24 24" fill="#222" aria-hidden="true"><path d="M3 3h18v18H3z"/><path fill="#fff" d="M8 7h2.6l3 4.3V7H16v10h-2.6L10.4 12v5H8z"/></svg>
-    </a>
-  </div>
-  <div class="grit-footer__text">
-    <p>© 2025 그릿에듀 | 대한민국 교육의 새로운 표준</p>
-    <p>[08635] 서울 금천구 시흥대로47길 28-5 남서울교육문화센터 5층<br>Tel : 02-809-0611</p>
-  </div>
-</footer>
 <button id="gritToTop" class="grit-top" aria-label="맨 위로">▲</button>
 <script>
   const topBtn = document.getElementById('gritToTop');
@@ -74,33 +44,77 @@
   topBtn.addEventListener('click', () => window.scrollTo({ top: 0, behavior: 'smooth' }));
   onScroll();
 
-  // 강사진 8명 프리뷰
-  (async () => {
-    const res = await fetch('./data/instructors.json');
-    const data = await res.json();
-    const list = data.filter(i => i.subject !== '컨설팅').slice(0,8);
-    document.getElementById('gritInstructorsPreview').innerHTML = list.map(i => `
-      <a class="instructor-card" href="./instructors.html?id=${i.id}" aria-label="${i.name} 상세">
+<script>
+async function renderInstructors(targetId, limit=null){
+  const res = await fetch('./data/instructors.json');
+  const data = await res.json();
+  let list = data.filter(i => i.subject !== '컨설팅');
+
+  const grid = document.getElementById(targetId);
+  const bar  = grid.previousElementSibling; // .grit-filter
+  function paint(subject='all'){
+    let arr = subject==='all' ? list : list.filter(x=>x.subject===subject);
+    if (limit) arr = arr.slice(0, limit);
+    grid.innerHTML = arr.map(i => `
+      <a class="instructor-card" href="./instructors.html?id=${i.id}" aria-label="${i.name} 상세" data-subject="${i.subject||''}">
+        <div class="overlay">
+          <div class="txt">
+            <strong>${i.subject||''}</strong>
+            <span>${(i.bio||'').slice(0,40)}${(i.bio||'').length>40?'…':''}</span>
+          </div>
+        </div>
         <img src="${i.photo}" alt="${i.name}">
         <h3>${i.name}</h3>
-        <p>${i.subject||''}</p>
       </a>
     `).join('');
-  })();
+  }
+  paint();
+
+  if (bar && bar.classList.contains('grit-filter')) {
+    bar.querySelectorAll('button').forEach(btn=>{
+      btn.addEventListener('click', ()=>{
+        bar.querySelectorAll('button').forEach(b=>b.classList.remove('on'));
+        btn.classList.add('on');
+        paint(btn.dataset.subject);
+      });
+    });
+  }
+}
+document.addEventListener('DOMContentLoaded', ()=>{
+  // index.html: 프리뷰 8명
+  if (document.getElementById('gritInstructorsPreview')) renderInstructors('gritInstructorsPreview', 8);
+  // instructors.html: 전체
+  if (document.getElementById('instructorGrid')) renderInstructors('instructorGrid', null);
+});
+</script>
 
   // 갤러리 자동 로드 (폴더 3개)
   (async()=>{
-    const base='./assets/gallery/';
-    const folders=['grit','event','study'];
-    const grid=document.getElementById('gritGalleryPreview');
-    let imgs=[];
-    for(const f of folders){
-      // GitHub Pages 정적 호스팅에선 디렉토리 리스트 불가 → 수동 패턴 1~6.jpg 사용
-      for(let i=1;i<=6;i++){
-        imgs.push(`${base}${f}/${i}.jpg`);
-      }
+    const base = './assets/gallery/';
+    const folders = ['grit','event','study'];
+    const exts = ['jpg','jpeg','png','JPG','JPEG','PNG'];
+    const maxIndex = 99;
+
+    async function fileExists(url){
+      try{
+        const res = await fetch(url, { method:'HEAD' });
+        return res.ok;
+      }catch(e){ return false; }
     }
-    grid.innerHTML=imgs.map(src=>`<img src="${src}" class="gallery-thumb" alt="그릿에듀 갤러리">`).join('');
+    async function findLatest(folder){
+      for(let i=maxIndex;i>=1;i--){
+        for(const ext of exts){
+          const url = `${base}${folder}/${folder}${i}.${ext}`;
+          if(await fileExists(url)) return url;
+        }
+      }
+      return null;
+    }
+
+    const grid = document.getElementById('gritGalleryPreview');
+    const urls = await Promise.all(folders.map(findLatest));
+    const cards = urls.map(u => u ? `<img src="${u}" class="gallery-thumb" alt="그릿에듀 갤러리 최신">` : '').join('');
+    grid.innerHTML = cards;
   })();
 </script>
 <script type="module" src="./assets/js/common.js"></script>
