--- a/instructors.html
+++ b/instructors.html
@@ -10,7 +10,7 @@
 <body>
   <main class="container">
     <h1>그릿에듀 강사진</h1>
-    <div class="grit-filter" role="tablist" aria-label="강사진 필터">
+    <div class="grit-filter" role="tablist" aria-label="강사진 필터" data-for="instructors">
       <button class="on" data-subject="all" role="tab" aria-selected="true">전체</button>
       <button data-subject="국어" role="tab">국어</button>
       <button data-subject="수학" role="tab">수학</button>
@@ -45,47 +45,35 @@
     </div>
   </div>
 
+  <script type="module" src="./assets/js/common.js"></script>
   <script>
-    async function renderInstructors(targetId, limit=null){
+    async function renderInstructorsPage(){
       const res = await fetch('./data/instructors.json');
       const data = await res.json();
-      let list = data.filter(i => i.subject !== '컨설팅');
-
-      const grid = document.getElementById(targetId);
-      const bar  = grid.previousElementSibling; // .grit-filter
+      const all = data.filter(x=>x.subject!=='컨설팅');
+      const grid = document.getElementById('instructorGrid');
+      const bar  = document.querySelector('.grit-filter[data-for="instructors"]');
       function paint(subject='all'){
-        let arr = subject==='all' ? list : list.filter(x=>x.subject===subject);
-        if (limit) arr = arr.slice(0, limit);
+        const arr = subject==='all' ? all : all.filter(x=>x.subject===subject);
         grid.innerHTML = arr.map(i => `
-          <a class="instructor-card" href="./instructors.html?id=${i.id}" aria-label="${i.name} 상세" data-subject="${i.subject||''}">
-            <div class="overlay">
-              <div class="txt">
-                <strong>${i.subject||''}</strong>
-                <span>${(i.bio||'').slice(0,40)}${(i.bio||'').length>40?'…':''}</span>
-              </div>
-            </div>
+          <article class="instructor-card" data-subject="${i.subject||''}">
+            <div class="overlay"><div class="txt"><strong>${i.subject||''}</strong><span>${(i.bio||'').slice(0,60)}${(i.bio||'').length>60?'…':''}</span></div></div>
             <img src="${i.photo}" alt="${i.name}">
             <h3>${i.name}</h3>
-          </a>
-        `).join('');
+          </article>`).join('');
       }
       paint();
-
-      if (bar && bar.classList.contains('grit-filter')) {
-        bar.querySelectorAll('button').forEach(btn=>{
-          btn.addEventListener('click', ()=>{
-            bar.querySelectorAll('button').forEach(b=>b.classList.remove('on'));
-            btn.classList.add('on');
-            paint(btn.dataset.subject);
-          });
+      if (bar) {
+        bar.addEventListener('click', e=>{
+          const btn = e.target.closest('button[data-subject]');
+          if(!btn) return;
+          bar.querySelectorAll('button').forEach(b=>b.classList.remove('on'));
+          btn.classList.add('on');
+          paint(btn.dataset.subject);
         });
       }
     }
-    document.addEventListener('DOMContentLoaded', ()=>{
-      // instructors.html: 전체
-      if (document.getElementById('instructorGrid')) renderInstructors('instructorGrid', null);
-    });
+    document.addEventListener('DOMContentLoaded', renderInstructorsPage);
   </script>
-  <script type="module" src="./assets/js/common.js"></script>
 </body>
 </html>
