--- a/story.html
+++ b/story.html
@@ -3,31 +3,17 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>GRIT EduTech | Story</title>
+  <link rel="icon" type="image/jpeg" href="./assets/favicon.jpg">
+  <title>그릿에듀 | 이야기</title>
   <link rel="stylesheet" href="./assets/css/main.css">
 </head>
 <body>
-  <header>
-    <div class="nav">
-      <div class="left"><a href="/"><img src="./assets/logo.png" alt="로고"></a></div>
-      <div class="center">
-        <nav class="menu">
-          <a href="/">그릿에듀</a>
-          <a href="/story.html" class="active">GRIT EDU STORY</a>
-          <a href="/instructors.html">강사진</a>
-          <a href="/album.html">앨범</a>
-          <a href="/consult.html">상담 예약</a>
-        </nav>
-      </div>
-    </div>
-  </header>
-
-  <main class="container">
-    <h1>GRIT EDU STORY</h1>
-    <p>GRIT EduTech는 <b>교육의 새로운 표준</b>을 만들어가는 학원형 EdTech 브랜드입니다.</p>
+  <main class="grit-section">
+    <h1>그릿에듀 이야기</h1>
+    <p>그릿에듀는 <b>교육의 새로운 표준</b>을 만들어가는 학원형 EdTech 브랜드입니다.</p>
     <p>2025년, "도전과 끈기(GRIT)"를 모토로, 과목별 전문 강사진과 함께 학생 개개인에게 최적화된 학습 경험을 제공합니다.</p>
   </main>
 
-  <footer><div class="inner">© 2025 GRIT EduTech</div></footer>
+  <script type="module" src="./assets/js/common.js"></script>
 </body>
 </html>
