--- a/gallery.html
+++ b/gallery.html
@@ -60,7 +60,7 @@
         else { imgs = map[group].map(u=>({u: u, f: group})); }
         grid.innerHTML = imgs.map(({u,f}) => `
           <figure class="gallery-thumb" data-group="${f}">
-            <img src="${u}" alt="그릿에듀 ${f}">
+            <img src="${u}" alt="그릿에듀 ${f}" onclick="openLightbox('${u}')">
           </figure>`).join('');
       }
       paint();
@@ -75,17 +75,31 @@
         paint(btn.dataset.group);
       });
 
-      // 라이트박스
-      const lb = document.getElementById('lightbox');
-      const lbImg = document.getElementById('lightboxImg');
-      grid.addEventListener('click', e=>{
-        const img = e.target.closest('img');
-        if(!img) return;
-        lbImg.src = img.src;
-        lb.setAttribute('aria-hidden','false');
-      });
-      document.addEventListener('click', e=>{ if(e.target.dataset.close) lb.setAttribute('aria-hidden','true'); });
-      document.addEventListener('keydown', e=>{ if(e.key==='Escape') lb.setAttribute('aria-hidden','true'); });
+      // 라이트박스 함수
+      function openLightbox(src) {
+        const lightbox = document.createElement('div');
+        lightbox.className = 'lightbox active';
+        lightbox.innerHTML = `
+          <div class="lightbox-content">
+            <img src="${src}" alt="그릿에듀 갤러리">
+            <button class="lightbox-close" onclick="closeLightbox()">×</button>
+          </div>
+        `;
+        document.body.appendChild(lightbox);
+        document.body.style.overflow = 'hidden';
+      }
+
+      function closeLightbox() {
+        const lightbox = document.querySelector('.lightbox');
+        if (lightbox) {
+          lightbox.remove();
+          document.body.style.overflow = 'auto';
+        }
+      }
+
+      // 전역 함수로 등록
+      window.openLightbox = openLightbox;
+      window.closeLightbox = closeLightbox;
     }
 
     document.addEventListener('DOMContentLoaded', loadGallery);
