--- a/index.html
+++ b/index.html
@@ -95,8 +95,44 @@
     }
     const grid = document.getElementById('gritGalleryPreview');
     const urls = await Promise.all(folders.map(latestOf));
-    grid.innerHTML = urls.filter(Boolean).map(u=>`<img src="${u}" class="gallery-thumb" alt="그릿에듀 갤러리 최신">`).join('');
+    grid.innerHTML = urls.filter(Boolean).map(u=>`<img src="${u}" class="gallery-thumb" alt="그릿에듀 갤러리 최신" onclick="openLightbox('${u}')">`).join('');
   }
+
+  // 라이트박스 함수
+  function openLightbox(src) {
+    const lightbox = document.createElement('div');
+    lightbox.className = 'lightbox active';
+    lightbox.innerHTML = `
+      <div class="lightbox-content">
+        <img src="${src}" alt="그릿에듀 갤러리">
+        <button class="lightbox-close" onclick="closeLightbox()">×</button>
+      </div>
+    `;
+    document.body.appendChild(lightbox);
+    document.body.style.overflow = 'hidden';
+  }
+
+  function closeLightbox() {
+    const lightbox = document.querySelector('.lightbox');
+    if (lightbox) {
+      lightbox.remove();
+      document.body.style.overflow = 'auto';
+    }
+  }
+
+  // ESC 키로 라이트박스 닫기
+  document.addEventListener('keydown', (e) => {
+    if (e.key === 'Escape') closeLightbox();
+  });
+
+  // 라이트박스 배경 클릭으로 닫기
+  document.addEventListener('click', (e) => {
+    if (e.target.classList.contains('lightbox')) closeLightbox();
+  });
+
+  // 전역 함수로 등록
+  window.openLightbox = openLightbox;
+  window.closeLightbox = closeLightbox;
 
   document.addEventListener('DOMContentLoaded', ()=>{
     renderInstructorsHome();
